Reduce panel height to avoid second scrollbar

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -97,7 +97,7 @@ $green:     #859900;
 
 #panel {
     overflow-y: auto;
-    max-height: calc(100vh - 11em);
+    max-height: calc(100vh - 11.5em);
 }
 
 ul {
@@ -355,6 +355,6 @@ body {
     }
 
     #panel {
-        max-height: calc(100vh - 8em);
+        max-height: calc(100vh - 8.5em);
     }
 }
